@@ -17,8 +17,11 @@ import com.twitter.util.{Duration, Monitor, Timer, Var}
 import java.net.{SocketAddress, InetSocketAddress}
 
 object DefaultClient {
-  private val defaultFailureAccrual: ServiceFactoryWrapper =
-    FailureAccrualFactory.wrapper(5, 5.seconds)(DefaultTimer.twitter)
+  private def defaultFailureAccrual(sr: StatsReceiver): ServiceFactoryWrapper =
+    FailureAccrualFactory.wrapper(sr, 5, 5.seconds)(DefaultTimer.twitter)
+
+  /** marker trait for uninitialized failure accrual */
+  private[finagle] trait UninitializedFailureAccrual
 }
 
 /**
@@ -60,9 +63,10 @@ case class DefaultClient[Req, Rep](
   maxLifetime: Duration = Duration.Top,
   requestTimeout: Duration = Duration.Top,
   failFast: Boolean = true,
-  failureAccrual: Transformer[Req, Rep] = { factory: ServiceFactory[Req, Rep] =>
-    DefaultClient.defaultFailureAccrual andThen factory
-  },
+  failureAccrual: Transformer[Req, Rep] =
+    new DefaultClient.UninitializedFailureAccrual with Transformer[Req,Rep] {
+        def apply(f: ServiceFactory[Req, Rep]) = f
+    },
   serviceTimeout: Duration = Duration.Top,
   timer: Timer = DefaultTimer.twitter,
   statsReceiver: StatsReceiver = ClientStatsReceiver,
@@ -75,8 +79,15 @@ case class DefaultClient[Req, Rep](
 ) extends Client[Req, Rep] { outer =>
 
   private[this] def transform(stack: Stack[ServiceFactory[Req, Rep]]) = {
+    val failureAccrualTransform: Transformer[Req,Rep] = failureAccrual match {
+      case _: DefaultClient.UninitializedFailureAccrual => { factory: ServiceFactory[Req, Rep] =>
+            DefaultClient.defaultFailureAccrual(statsReceiver) andThen factory
+        }
+      case _ => failureAccrual
+    }
+
     val stk = stack
-      .replace(FailureAccrualFactory.role, failureAccrual)
+      .replace(FailureAccrualFactory.role, failureAccrualTransform)
       .replace(StackClient.Role.pool, pool(statsReceiver))
       .replace(TraceInitializerFilter.role, newTraceInitializer)
 
